[tool.poetry]
name = "trading-sim-gym"
version = "0.1.4"
description = "Environments For Trading Backtesting & RL GYM"
authors = ["nockchun <nockchun@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/nockchun/TradingSimGym"
repository = "https://github.com/nockchun/TradingSimGym"
keywords = ["gym environments", "reenforcement learning", "python"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
